syntax = "proto3";
package fx.ethermint.erc20.v1;

import "gogoproto/gogo.proto";
import "cosmos/bank/v1beta1/bank.proto";
import "ethermint/erc20/v1/erc20.proto";
import "ethermint/feemarket/v1/feemarket.proto";
import "ethermint/evm/v1/evm.proto";

option go_package = "github.com/functionx/fx-core/x/erc20/types";

// GenesisState defines the module's genesis state.
message GenesisState {
  // module parameters
  Params params = 1 [ (gogoproto.nullable) = false ];
  // registered token pairs
  repeated TokenPair token_pairs = 2 [ (gogoproto.nullable) = false ];
}

// Params defines the erc20 module params
message Params {
  // parameter to enable the intrarelaying of Cosmos coins <--> ERC20 tokens.
  bool enable_erc20 = 1;
  // parameter to enable the EVM hook to convert an ERC20 token to a Cosmos
  // Coin by transferring the Tokens through a MsgEthereumTx to the
  // ModuleAddress Ethereum address.
  bool enable_evm_hook = 2 [ (gogoproto.customname) = "EnableEVMHook" ];
  // parameter to set ibc timeout
  uint64 ibc_timeout = 3;
}

message InitEvmProposal {
  option (gogoproto.equal) = false;

  // the title of the update proposal
  string title = 1;
  // the description of the proposal
  string description = 2;

  // evm module params
  fx.ethermint.evm.v1.Params evmParams = 3;

  // feeMarket module params.
  fx.ethermint.feemarket.v1.Params feemarketParams = 4;

  // erc20 moduel params.
  Params erc20Params = 5;

  // token pairs of Cosmos native denom and FIP20 token address
  repeated cosmos.bank.v1beta1.Metadata metadata = 6 [(gogoproto.nullable) = false];
}
