syntax = "proto3";
package ethermint.intrarelayer.v1;

import "gogoproto/gogo.proto";
import "cosmos/bank/v1beta1/bank.proto";
import "ethermint/intrarelayer/v1/genesis.proto";

option go_package = "github.com/functionx/fx-core/x/intrarelayer/types";


message InitIntrarelayerParamsProposal {
  option (gogoproto.equal) = false;
  // the title of the update proposal
  string title = 1;
  // the description of the proposal
  string description = 2;
  // intrarelayer module params
  ethermint.intrarelayer.v1.Params params = 3;
  // token pairs of Cosmos native denom and FIP20 token address
  repeated cosmos.bank.v1beta1.Metadata metadata = 4 [(gogoproto.nullable) = false];
}

// RegisterCoinProposal is a gov Content type to register a token pair
message RegisterCoinProposal {
  option (gogoproto.equal) = false;
  // title of the proposal
  string title         = 1;
  // proposal description
  string description   = 2;
  // token pair of Cosmos native denom and FIP20 token address
  cosmos.bank.v1beta1.Metadata metadata = 3 [(gogoproto.nullable) = false];
}

// RegisterCoinProposal is a gov Content type to register a token pair
message RegisterFIP20Proposal {
  option (gogoproto.equal) = false;
  // title of the proposal
  string title         = 1;
  // proposal description
  string description   = 2;
  // contract address of FIP20 token
  string fip20address = 3;
}

// ToggleTokenRelayProposal is a gov Content type to toggle
// the internal relaying of a token pair.
message ToggleTokenRelayProposal {
  option (gogoproto.equal) = true;
  // title of the proposal
  string title         = 1;
  // proposal description
  string description   = 2;
  // token identifier can be either the hex contract address of the FIP20 or the
  // Cosmos base denomination
  string token = 3;
}
